--- a/Css files/products.css
+++ b/Css files/products.css
@@ -17,7 +17,10 @@
     height: 82vh;
     background-color: rgba(0, 0, 0, 0.393);
     background-blend-mode: darken;
+    transition: .5s;
+    animation: header 3s forwards;
 }
+
 .product-content{
     align-items: center;
     display: flex;
@@ -27,7 +30,7 @@
     transition: .5s;
 }
 .product-content:hover{
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(2px);
 }
 
 .product-content h3{
@@ -47,6 +50,7 @@
     padding: 1rem 3rem;
     background-color: rgba(0, 0, 0, 0.326);
     transition: .5s;
+    border: none;
 }
 .btn-product a{
     color: white;
@@ -56,4 +60,175 @@
 }
 .btn-product:hover{
     transform: scale(1.1);
+}
+
+#sign-in{
+    display: flex;
+    flex-direction: row;
+    padding: 5rem 4rem;
+    margin: 4rem 0;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: .5px solid gray;
+    
+}
+.reveal{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 2s all ease;
+}
+.reveal.active{
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.signup h3{
+    font-size: 40px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
+}
+.signup p{
+    padding: 10px 0;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 500;
+
+}
+
+#product3-section{
+    display: flex;
+    padding: 5rem 4rem;
+    flex-direction: column;
+    justify-content: center;
+    border-bottom: 1px solid gray;
+}
+
+.blogs{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+
+.blogs-in{
+    padding: 1rem 2rem;
+    width: 700px;
+    height: 700px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.blog1{
+    background-image: url(/imagees/top\ selling\ \(1\).jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+    margin: .5rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.336);
+    background-blend-mode: darken;
+    transition: .1s;
+}
+.blog1:hover{
+    box-shadow: 0px 0px 10px blue;
+}
+.blog2{
+    background-image: url(/imagees/top\ selling\ \(2\).jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+    margin: .5rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.336);
+    background-blend-mode: darken;
+    transition: .5s;
+}
+.blog2:hover{
+    box-shadow: 0px 0px 10px blue;
+}
+.blog3{
+    background-image: url(/imagees/top\ selling\ \(3\).jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+    margin: .5rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.336);
+    background-blend-mode: darken;
+}
+.blog3:hover{
+    box-shadow: 0px 0px 10px blue;
+}
+.blog4{
+    background-image: url(/imagees/top\ selling\ \(7\).jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+    margin: .5rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.336);
+    background-blend-mode: darken;
+}
+.blog4:hover{
+    box-shadow: 0px 0px 10px blue;
+}
+.blog5{
+    background-image: url(/imagees/Affliction\ Mens\ Shirt\ Xl\ Brand\ Original\ With\ Tags\ Limited\ Edition.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 500px;
+    height: 650px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.336);
+    background-blend-mode: darken;
+    margin: 1rem 0;
+    
+}
+.blog5:hover{
+    box-shadow: 0px 0px 10px blue;
+}
+.blog-heading{
+    font-size: 40px;
+    color: white;
+    font-weight: 600;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.blog-link{
+    padding: 10px 30px;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    color: rgb(0, 81, 255);
+    text-decoration: none;
+    transition: .3s;
+}
+.blog-link:hover{
+    background-color: rgba(0, 0, 0, 0.286);
+    color: white;
 }
