--- a/Css files/style.css
+++ b/Css files/style.css
@@ -155,6 +155,17 @@ strong{
     justify-content: center;
     text-align: center;
 }
+.reveal{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 1s all ease;
+    border: none;
+}
+.reveal.active{
+    transform: translateY(0);
+    opacity: 1;
+}
 .style h2{
     font-size: 70px;
     color: rgb(0, 81, 255);
@@ -475,6 +486,7 @@ footer{
     justify-content: center;
     padding: 1rem 0;
     background-color: lightgray;
+    position: sticky;
 }
 footer h4{
     font-size: 20px;
