--- a/Css files/products.css
+++ b/Css files/products.css
@@ -232,3 +232,59 @@
     background-color: rgba(0, 0, 0, 0.286);
     color: white;
 }
+
+#popular-products{
+    padding: 5rem 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.populars{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.p-contents{
+    margin: 8px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border-radius: 5px;
+    transition: .5s;
+    
+}
+.p-contents img{
+    width: 300px;
+    height: 400px;
+    transition: .5s;
+    box-shadow: 0px 0px 30px 5px lightgray;
+}
+.p-contents img:hover{
+    height: 450px;
+}
+.p-contents h3{
+    font-size: 25px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
+    padding: 1rem 0;
+}
+.p-contents a{
+    padding: 10px 0;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    transition: .2s;
+}
+.p-contents a:hover{
+    color: whitesmoke;
+    font-weight: 600;
+    background-color: rgb(43, 110, 255);
+}
+.view{
+    padding: 5rem 0;
+    display: flex;
+    justify-content: center;
+}
+
