--- a/Css files/contact.css
+++ b/Css files/contact.css
@@ -1,126 +1,235 @@
+
+
 *{
-    margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    box-sizing: border-box;
 }
 
-body{
-    display: grid;
-    height: 100%;
-    width: 100%;
-    place-items:center;
-    background:-webkit-linear-gradient(left, #003366, #004080, #0059b3, #0073e6);
 
-}
 
-::selection{
-    background: #1a75ff;
-    color: #fff;
-}
-.wrapper{
-    overflow: hidden;
-    max-width: 390px;
-    background: #fff;
-    padding: 30px;
-    border-radius: 15px;
-    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
-}
 
-.wrapper .title-text{
-    display: flex;
-    width: 200px;
-}
-.wrapper .title{
-    width: 50%;
-    font-size: 35px;
-    font-weight: 600;
-    text-align: center;
-    transition: all .6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-.wrapper.slide-controls{
+
+
+.reveal{
     position: relative;
-    display: flex;
-    height: 50px;
-    width: 100%;
-    overflow: hidden;
-    margin: 30px 0 10px 0;
-    justify-content: space-between;
-    border: 1px solid lightgray;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 1s all ease;
+    border: none;
 }
-.slide-controls .slide{
-    height: 100%;
-    width: 100%;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 600;
-    text-align: center;
-    line-height: 48px;
-    cursor: pointer;
-    z-index: 1;
-    transition: all 0.5s ease;
-}
-.slide-controls label.signup{
-    color: #000;
-}
-.slide-controls .slider-tab{
-    height: 100%;
-    width: 50%;
-    left: 0;
-    z-index: 0;
-    border-radius: 15px;
-    background: -webkit-linear-gradient(left, #003366,#004080,#0059b3,#0073e6);
-    transition: all 0.5s cubic-bezier(0.68,-0.55,0.265,1.55);
+.reveal.active{
+    transform: translateY(0);
+    opacity: 1;
 }
 
-input[type="radio"]{
+
+
+#contact-header{
+    display: flex;
+    flex-direction: row;
+    padding: 5rem 2rem;
+    justify-content: center;
+}
+.contacts{
+    display: flex;
+    flex-direction: row;
+}
+.elements{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 3rem;
+    padding: 2rem;
+    animation: elements .5s ease;
+    transition: .2s;
+}
+@keyframes elements{
+    from{
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+    to{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+.elements:hover{
+    box-shadow: 0px 0px 10px 5px lightgrey;
+    cursor: pointer;
+}
+.elements i{
+    padding: 10px;
+}
+.elements i img{
+    width: 50px;
+}
+.elements h2{
+    padding: 10px 0;
+}
+.elements p a{
+    padding: 10px 0;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: black;
+}
+.elements p a:hover{
+    color: rgb(0, 81, 255);
+}
+
+
+.wrapper{
+    margin-bottom: 2rem;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(/imagees/sign-up.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+@keyframes forms{
+    from{
+        transform: translateY(30px);
+        opacity: 0;
+    }
+    to{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+
+.modalForm{
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+    width: 400px;
+    min-height: 80vh;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    animation: forms 1s forwards;
+}
+.actionBtns{
+    width: 80%;
+    background-color: royalblue;
+    margin: 2em;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    border-radius: 50px;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+}
+.actionBtn{
+    padding: 1em;
+    width: 50%;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    border-radius: 50px;
+    color: #fff;
+    font-size: 0.8em;
+    font-weight: 600;
+    cursor: pointer;
+}
+.moveBtn{
+    position: absolute;
+    width: 50%;
+    height: 90%;
+    margin: 2px;
+    border: none;
+    outline: none;
+    border-radius: 50px;
+    background-color: #fff;
+    font-size: 0.8em;
+    font-weight: 600;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    transform: translateX(0);
+    transition: all 0.2s ease-in-out;
+}
+.rightBtn{
+    transform: translateX(98%);
+    transition: all 0.2s ease-in-out;
+}
+.inputGroup{
+    width: 300px;
+    margin: 0.8em 0;
+    background-color: rgb(245, 245, 245);
+    border-radius: 50px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    font-weight: 500;
+}
+.inputGroup input{
+    width: 100%;
+    padding: 1em 1.5em;
+    background-color: transparent;
+    border: none;
+    border-radius: 50px;
+}
+.inputGroup input:focus{
+    outline: none;
+}
+.submitBtn{
+    width: 150px;
+    padding: 1em;
+    margin: 2em 0;
+    border-radius: 50px;
+    border: none;
+    outline: none;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    cursor: pointer;
+    font-size: 0.8em;
+    font-weight: 600;
+    transition: all 0.3s ease-in-out;
+}
+.submitBtn:hover{
+    background-color: royalblue;
+    color: #fff;
+    transition: all 0.3s ease-in-out;
+}
+.form{
     display: none;
 }
-#signup:checked~.slider-tab{
-    left: 50%;
+.singupForm{
+    display: block;
 }
-#signup:checked~label.signup{
-    color: #fff;
-    cursor: default;
-    user-select: none;
+.loginForm{
+    display: block;
 }
-#signup:checked~label.login{
-    color: #000;
-}
-.login:checked~label.signup{
-    color: #000;
-}
-.login:checked~label.login{
-    cursor: default;
-    user-select: none;
-}
-.wrapper .form-container{
-    width: 100%;
-    overflow: hidden;
-}
-.form-container .form-inner{
-    display: flex;
-    width: 200%;
-}
-.form-container .form-inner form{
-    width: 50%;
-    transition: all 0.5s cubic-bezier(0.68,-0.55,0.265,1.55);
-}
-.form-inner form.field{
-    height: 50%;
-    width: 100%;
-    margin-top: 20px;
-}
-.form-inner form .field input{
-    height: 100%;
-    width: 100%;
-    outline: none;
-    padding-left: 15px;
-    border: 1px solid lightgray;
-    border-bottom-width: 2px;
-    font-size: 17px;
-    transition: all 0.3s ease;
-}
-.form-inner form .field input:focus{
 
+
+
+#map{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border: 3px solid rgb(0, 81, 255);
+}
+
+.map-content{
+    width: 700px;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(0, 81, 255);
+    align-items: center;
+}
+.map-content h3{
+    color: white;
+    font-size: 50px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
+}
+
+.map-element{
+    border: 3px solid rgb(0, 81, 255);
 }
