--- a/Css files/about.css
+++ b/Css files/about.css
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: header 1s forwards;
 }
 
 #about-header h2{
