--- a/Css files/products.css
+++ b/Css files/products.css
@@ -98,6 +98,7 @@
 
 #product3-section{
     display: flex;
+    flex-wrap: wrap;
     padding: 5rem 4rem;
     flex-direction: column;
     justify-content: center;
@@ -115,7 +116,6 @@
 .blogs-in{
     padding: 1rem 2rem;
     width: 700px;
-    height: 700px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -238,6 +238,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex-wrap: wrap;
 }
 .populars{
     display: flex;
@@ -289,7 +290,7 @@
 }
 
 #advertisement{
-    padding: 5rem 2rem 0 0;
+    padding: 5rem 2rem 0 2rem;
     display: flex;
     justify-content: center;
 }
@@ -371,3 +372,203 @@
     width: 300px;
     height: 400px;
 }
+
+
+@media only screen and (max-width: 1024px){
+    #product3-section{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+    #popular-products{
+        padding: 1rem;
+    }
+   .populars{
+    flex-wrap: wrap;
+   }
+   #perfume{
+    padding: 1rem;
+   }
+   .perfumes{
+    justify-content: center;
+    flex-wrap: wrap;
+   }
+   .ad{
+    width: 100%;
+   }
+    .product-content h3{
+        font-size: 30px;
+        font-weight: 400;
+    }
+
+    .ad{
+       padding-top: 0;
+    }
+
+    .blogs{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0;
+    }
+
+    .blogs-in{
+        padding: 10px;
+        width: 100%;
+        display: flex;
+        margin: 0;
+        justify-content: center;
+    }
+
+   
+
+    .blog5{
+        justify-content: center;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        height: 500px;
+    }
+    .style{
+        display: block;
+        width: 100%;
+    }
+}
+
+
+@media only screen and (max-width: 768px){
+
+    #sign-in{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .product-content h3{
+        color: white;
+        font-size: 50px;
+        font-weight: 400;
+    }
+    #product3-section{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .blogs{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        
+    }
+    .blogs-in{
+        display: flex;
+        flex-direction: column;
+    }
+  .blog1{
+        width: 100%;
+    }
+    .blog2{
+        width: 100%;
+    }
+    .blog3{
+        width: 100%;
+    }
+    .blog4{
+        width: 100%;
+    }
+    .blog5{
+        display: none;
+    }
+
+    .ad h4{
+        width: 300px;
+        font-size: 30px;
+        text-align: center;
+    }
+
+
+
+}
+
+
+@media only screen and (max-width: 425px){
+    #products-header{
+        padding: 1rem;
+    }
+    #product3-section{
+        padding: 1rem;
+    }
+
+    .blogs-in{
+        padding: 0;
+    }
+    .blog1{
+        margin: 1rem 0;
+    }
+    .blog2{
+        margin: 1rem 0;
+    }
+    .blog3{
+        margin: 1rem 0;
+    }
+    .blog4{
+        margin: 1rem 0;
+    }
+    #popular-products{
+        padding: 1rem;
+    }
+    .p-contents{
+        padding: 0;
+        margin: 0;
+        width: 100%;
+    }
+    .p-contents img{
+        width: 100%;
+    }
+
+    #perfume{
+        padding: 1rem;
+    }
+    .perfume-contents{
+        margin: 0;
+    }
+
+    #advertisement{
+        padding: 0;
+        width: 100%;
+        justify-content: center;
+    }
+    .ad{
+        height: 500px;
+        margin: 0;
+    }
+    .ad h4{
+        color: rgba(0, 0, 0, 0.532);
+        font-size: 30px;
+        width: 200px;
+    }
+
+    .btn{
+        width: 100%;
+    }
+    
+
+    
+
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
