--- a/Css files/contact.css
+++ b/Css files/contact.css
@@ -9,7 +9,44 @@
 
 
 
-
+#message {
+    margin: 2rem;
+    position: fixed;
+    display:none;
+    border-radius: 30px;
+    flex-direction: column;
+    background: #f1f1f1;
+    color: #000;
+    padding: 20px;
+    margin-top: 10px;
+    transition: .3s;
+    right: 20px;
+    top: 250px;
+  }
+  #message:hover{
+    transform: scale(1.1);
+  }
+  #message p {
+    padding: 10px 35px;
+    font-size: 18px;
+  }
+  .valid {
+    color: green;
+  } 
+  .valid:before {
+    position: relative;
+    left: -35px;
+    content: "✔";
+  }
+  .invalid {
+    color: red;
+  } 
+  .invalid:before {
+    position: relative;
+    left: -35px;
+    content: "✖";
+  }
+  
 
 
 .reveal{
@@ -94,6 +131,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
+    transition: .3s;
 }
 @keyframes forms{
     from{
