--- a/Css files/contact.css
+++ b/Css files/contact.css
@@ -25,6 +25,20 @@
     top: 250px;
     background-color: white;
     border: none;
+    animation: message .5s forwards;
+  }
+  @keyframes message{
+    from{
+        opacity: 0;
+        transform: scale(0);
+        transform: translateX(-400px);
+    }
+    to{
+        opacity: 1;
+        transform: scale(1);
+        transform: translateX(0);
+    }
+    
   }
   #message:hover{
     transform: scale(1.1);
