--- a/Css files/contact.css
+++ b/Css files/contact.css
@@ -11,18 +11,14 @@
 
 
 #message {
-    margin: 2rem;
-    position: fixed;
+    margin: 1rem;
     display:none;
     border-radius: 30px;
     flex-direction: column;
     background: #f1f1f1;
     color: #000;
     padding: 20px;
-    margin-top: 10px;
     transition: .3s;
-    right: 20px;
-    top: 250px;
     background-color: white;
     border: none;
     animation: message .5s forwards;
@@ -31,12 +27,12 @@
     from{
         opacity: 0;
         transform: scale(0);
-        transform: translateX(-400px);
+        transform: translateY(-400px);
     }
     to{
         opacity: 1;
         transform: scale(1);
-        transform: translateX(0);
+        transform: translateY(0);
     }
     
   }
@@ -137,17 +133,17 @@
 
 
 .wrapper{
-    margin-bottom: 2rem;
+    padding: 2rem 1rem;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-image: url(../imagees/sign-up.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
     transition: .3s;
 }
 @keyframes forms{
@@ -218,6 +214,7 @@
     transition: all 0.2s ease-in-out;
 }
 .inputGroup{
+    display: flex;
     width: 300px;
     margin: 0.8em 0;
     background-color: rgb(245, 245, 245);
@@ -292,14 +289,12 @@
 }
 
 
-
-@media only screen and (max-width: 768px){
+@media only screen and (max-width:1024px){
     .wrapper{
-        display: flex;
-        flex-direction: column;
-        height: 200vh;
+        height: 100%;
     }
-
+}
+@media only screen and (max-width: 768px){
     .elements{
         text-align: center;
 
@@ -323,21 +318,18 @@
     .modalForm{
         width: 80%;
     }
-    .inputGroup{
-        width: 200px;
-    }
 }
 @media only screen and (max-width: 658px){
     .modalForm{
         margin: 0 1rem;
     }
+    .userForm{
+        padding: 0 20px;
+    }
 }
 @media (max-width: 320px){
     .modalForm{
         width: 80%;
-    }
-    .inputGroup{
-        width: 200px;
     }
     #contact-header{
         padding: 1rem;
