--- a/Css files/contact.css
+++ b/Css files/contact.css
@@ -161,8 +161,8 @@
 .modalForm{
     margin-top: 10rem;
     margin-bottom: 10rem;
-    width: 300px;
-    height: 100vh;
+    width: 400px;
+    height: 500px;
     background-color: #fff;
     border-radius: 60px;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
